update docs; change var to const
